<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:padding="8dp"
    android:layout_gravity="center"
    android:gravity="center"
    android:layout_height="match_parent">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:gravity="center"
    android:id="@+id/laySum"
    android:minWidth="400dp"
    android:paddingTop="15dp"
    android:paddingBottom="15dp"
    android:orientation="horizontal">
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:paddingLeft="4dp"
        android:textSize="16sp"
        android:textColor="#000"
        android:text="@string/summa"/>
    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingRight="14dp"
        android:layout_weight="2"
        android:inputType="number"
        android:singleLine="true"
        android:id="@+id/editSum"/>
</LinearLayout>
    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:gravity="center"
        android:textStyle="italic"
        android:text="@string/minBalance"/>
    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:background="@color/colorPrimary"
        android:text="@string/continu"
        android:textSize="16sp"
        android:textColor="#fff"
        android:id="@+id/btnContinue"/>
    <WebView
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:minHeight="320dp"
        android:minWidth="320dp"
        android:id="@+id/web"
        android:visibility="gone"/>
</LinearLayout>