<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#fff"
    android:layout_height="match_parent"
    android:paddingLeft="10dp"
    android:paddingRight="10dp"
    android:paddingBottom="10dp">
    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/edit"
        android:singleLine="true"
        android:textSize="18sp"
        android:hint="@string/mypass"
        android:textColor="#000"

        android:textAlignment="center"
        android:inputType="textPassword"
        android:background="@drawable/border_blue"
        android:textCursorDrawable="@drawable/color_cursor"
        android:imeOptions="actionNext"
        android:layout_marginTop="16dp"
        android:paddingLeft="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/editNewPass"
        android:singleLine="true"
        android:textSize="18sp"
        android:layout_below="@id/edit"
        android:layout_centerInParent="true"
        android:hint="@string/newpass"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textColor="#000"
        android:textAlignment="center"
        android:inputType="textPassword"
        android:imeOptions="actionNext"
        android:background="@drawable/border_blue"
        android:layout_marginTop="10dp"
        android:paddingLeft="5dp" />

    <EditText
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:id="@+id/editNewPass2"
        android:singleLine="true"
        android:textSize="18sp"
        android:layout_below="@id/editNewPass"
        android:layout_centerInParent="true"
        android:hint="@string/repass"
        android:typeface="monospace"
        android:inputType="textPassword"
        android:textCursorDrawable="@drawable/color_cursor"
        android:textColor="#000"
        android:textAlignment="center"
        android:imeOptions="actionNext"
        android:background="@drawable/border_blue"

        android:layout_marginTop="10dp"
        android:paddingLeft="5dp" />
    <Button
        android:layout_width="fill_parent"
        android:layout_height="44dp"
        android:id="@+id/BTNOK"
        android:text="ОК"
        android:textSize="18sp"
        android:gravity="center_horizontal"
        android:background="@color/colorPrimary"
        android:textColor="#fff"
        android:layout_below="@+id/editNewPass2"
        android:padding="8dp"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="10dp"
        android:elevation="3dp" />

</RelativeLayout>