<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:minWidth="250dp"
    android:minHeight="80dp"
    xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/list1"
        android:layout_marginTop="12dp"
        android:paddingLeft="8dp"
        android:id="@+id/layPrice"
        >
        <TextView android:layout_width="match_parent"
            android:layout_weight="1"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:id="@+id/tvInfo"
            android:textStyle="bold"
            android:paddingTop="18dp"
            android:paddingLeft="4dp"
            android:layout_height="wrap_content"/>
        <TextView android:layout_width="match_parent"
            android:textColor="@color/colorAccent"
            android:textSize="16sp"
            android:layout_weight="2"
            android:text="2 тенге"
            android:paddingTop="18dp"
            android:textStyle="bold"
            android:paddingLeft="4dp"
            android:layout_height="wrap_content"/>
    </LinearLayout>
    <TextView android:layout_width="match_parent"
        android:textColor="@color/colorBlack"
        android:textStyle="bold"
        android:paddingLeft="12dp"
        android:paddingTop="12dp"
        android:paddingRight="12dp"
        android:text="@string/alertTraining"
        android:paddingBottom="8dp"
        android:layout_height="wrap_content"/>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_below="@+id/list1"
        android:layout_marginTop="12dp"
        android:layout_marginBottom="12dp"
        android:id="@+id/lay">
        <Button
            android:layout_width="match_parent"
            android:textAllCaps="false"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:id="@+id/btnCancel"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:textColor="@color/colorWhite"
            android:text="@string/cancel"/>
        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/colorPrimary"
            android:layout_weight="1"
            android:layout_marginRight="6dp"
            android:layout_marginLeft="6dp"
            android:textAllCaps="false"
            android:id="@+id/btnOK"
            android:textColor="@color/colorWhite"
            android:text="@string/startTest"/>
    </LinearLayout>
</LinearLayout>